create article post form

--- a/article/templates/article/base.html
+++ b/article/templates/article/base.html
@@ -8,6 +8,16 @@
 {% block extrahead %}{% endblock %}
 </head>
 <body>
+  <nav>
+    <div class="nav-wrapper">
+      <a href="#" class="brand-logo">Logo</a>
+      <ul id="nav-mobile" class="right hide-on-med-and-down">
+        <li><a href="#">Post</a></li>
+        <li><a href="#">Bookmarks</a></li>
+        <li><a href="#">Logout</a></li>
+      </ul>
+    </div>
+  </nav>
   <div class="container">
     {% block content %}
       {{ content }}
