--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -3,10 +3,13 @@
 {% block title %} 記事リスト {%endblock%}
 
 {% block content %}
+<button class="waves-effect waves-light btn">Create New</button>
+
 <ul>
   {% for item in object_list %}
-  <li>{{ item }}</li>
+  <li><a href="#">{{ item }}</a></li>
   {% endfor %}
 </ul>
+
 
 {%endblock%}
