--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -3,7 +3,7 @@
 {% block title %} 記事リスト {%endblock%}
 
 {% block content %}
-<button class="waves-effect waves-light btn">Create New</button>
+<a class="waves-effect waves-light btn" href="{% url 'article:post_article' %}">Create New</a>
 
 <ul>
   {% for item in object_list %}
