--- a/article/templates/article/detail.html
+++ b/article/templates/article/detail.html
@@ -1,4 +1,5 @@
 {% extends 'article/base.html'%}
+{% load markdown_deux_tags %}
 
 {% block title %} {{ object }}{%endblock%}
 
@@ -6,6 +7,6 @@
 <a class="waves-effect waves-light btn" href="{% url 'article:post_article' %}">Create New</a>
 
 <h2> {{ object }}</h2>
-<section>{{ object.detail }}</section>
+<section>{{ object.detail | markdown }}</section>
 
 {%endblock%}
