--- a/article/templates/article/base.html
+++ b/article/templates/article/base.html
@@ -12,7 +12,7 @@
 <body>
   <nav>
    <div class="nav-wrapper">
-      <a href="#!" class="brand-logo">iS2Tech</a>
+      <a href="/" class="brand-logo">iS2Tech</a>
       <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
       <ul class="right hide-on-med-and-down">
         <li><a href="{% url 'index'%}">List</a></li>
@@ -57,12 +57,19 @@
             <li><a class="grey-text text-lighten-3" href="{% url 'article:products'%}">products</a></li>
           </ul>
         </div>
+        <div class="col l4 offset-l2 s12">
+          <h5 class="white-text">External links</h5>
+          <ul>
+            <li><a class="grey-text text-lighten-3" href="https://github.com/guni973/iS2Tech">GitHub</a></li>
+            <li><a class="grey-text text-lighten-3" href="https://guni973.github.io/">HP</a></li>
+          </ul>
+        </div>
+
       </div>
     </div>
     <div class="footer-copyright">
       <div class="container">
-        © 2014 Copyright Text
-        <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+        © 2017 Copyright guni973
       </div>
     </div>
     </footer> <script>
