--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -8,7 +8,8 @@
   <div class="row">
     {% for item in object_list %}
     <li>
-      <a class="col s8" href="{% url 'article:detail' item.id %}">{{ item }}</a>
+      <a class="col s6" href="{% url 'article:detail' item.id %}">{{ item }}</a>
+      <p class="col s2">Author:{{ item.author }}</p>
       <p class="col s2">{{ item.created_date }}<p>
       <a class="col s1" href="{% url 'article:update' item.id %}">
         <i class="material-icons">edit</i></a>
