--- a/article/templates/article/post_article.html
+++ b/article/templates/article/post_article.html
@@ -7,16 +7,21 @@
   <style>
     textarea#id_detail { height: 300px; }
   </style>
-  <form method="post">
   {{ form.non_field_errors }}
+  <form method="post">
   {% csrf_token %}
-  <table>
+    {{ form.title.label_tag }}
     {{ form.title }}
+
+    {{ form.detail.label_tag }}
     {{ form.detail }}
+
+    {{ form.article_types.label_tag }}
     {{ form.article_types }}
+
     {{ form.is_publish }}
-    <label for="{{ form.is_publish.id_for_label }}">Publish</label>
-  </table>
+    {{ form.is_publish.label_tag }}
+
   <input type="submit" class="btn">
 </form>
 {%endblock%}
