--- a/article/templates/article/post_article.html
+++ b/article/templates/article/post_article.html
@@ -9,18 +9,19 @@
   </style>
   {{ form.non_field_errors }}
   <form method="post">
-  {% csrf_token %}
+    {% csrf_token %}
     {{ form.title.label_tag }}
     {{ form.title }}
 
     {{ form.detail.label_tag }}
     {{ form.detail }}
 
-    {{ form.article_types.label_tag }}
     {{ form.article_types }}
+    {{ form.article_types.label_tag }}
 
     {{ form.is_publish }}
     {{ form.is_publish.label_tag }}
+    <p>Publish: 外部に公開する</p>
 
   <input type="submit" class="btn">
 </form>
