--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -9,12 +9,17 @@
     {% for item in object_list %}
     <li>
       <a class="col s6" href="{% url 'article:detail' item.id %}">{{ item }}</a>
-      <p class="col s2">Author:{{ item.author }}</p>
+      <p class="col s2">Author:
+        <a href="{% url 'accounts:mypage' item.author.id %}">{{ item.author }}</a>
+      </p>
       <p class="col s2">{{ item.created_date }}<p>
-      <a class="col s1" href="{% url 'article:update' item.id %}">
-        <i class="material-icons">edit</i></a>
-      <a class="col s1" href="{% url 'article:delete' item.id %}">
-        <i class="material-icons">delete</i></a>
+      <a href="#" class='dropdown-button col s1' data-activates='dropdown1'><i class="material-icons">more_vert</i></a>
+
+      <!-- Dropdown Structure -->
+      <ul id='dropdown1' class='dropdown-content'>
+        <li><a class="" href="{% url 'article:update' item.id %}">Edit</a></li>
+        <li><a class="" href="{% url 'article:delete' item.id %}">Remove</a></li>
+      </ul>
     </li>
     {% endfor %}
   </div>
