投稿フォームにmd-previewを追加。プロジェクト管理をpipenvに変更

--- a/article/templates/article/base.html
+++ b/article/templates/article/base.html
@@ -86,8 +86,9 @@
         © 2017 Copyright guni973
       </div>
     </div>
-    </footer> <script>
+  </footer>
+  <script>
     $(".button-collapse").sideNav();
-    </script>
-  </body>
+  </script>
+</body>
 </html>
