improve list view

--- a/article/templates/article/base.html
+++ b/article/templates/article/base.html
@@ -8,6 +8,7 @@
 <script src="{% static 'material/js/jquery.js' %}"></script>
 {% include 'material/includes/material_js.html' %}
 <link rel="stylesheet" type="text/css" href="{% static 'css/custom_material.css' %}" />
+<link rel="stylesheet" type="text/css" href="{% static 'css/custom_markdown.css' %}" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
