--- a/article/templates/article/index.html
+++ b/article/templates/article/index.html
@@ -4,24 +4,32 @@
 
 {% block content %}
 
-<ul>
-  <div class="row">
-    {% for item in object_list %}
-    <li>
-      <a class="col s6" href="{% url 'article:detail' item.id %}">{{ item }}</a>
-      <p class="col s2">Author:
-        <a href="{% url 'accounts:mypage' item.author.id %}">{{ item.author }}</a>
-      </p>
-      <p class="col s2">{{ item.created_date }}<p>
-      <a href="#" class='dropdown-button col s1' data-activates='dropdown1'><i class="material-icons">more_vert</i></a>
+<table class="bordered">
+  <thead>
+      <tr>
+        <td>title</td>
+        <td>Author</td>
+        <td>created date</td>
+        <td>sub menu</td>
+      </tr>
+    </thead>
 
-      <!-- Dropdown Structure -->
-      <ul id='dropdown1' class='dropdown-content'>
-        <li><a class="" href="{% url 'article:update' item.id %}">Edit</a></li>
-        <li><a class="" href="{% url 'article:delete' item.id %}">Remove</a></li>
-      </ul>
-    </li>
-    {% endfor %}
-  </div>
-</ul>
+    <tbody>
+      {% for item in object_list %}
+      <tr>
+        <td><a href="{% url 'article:detail' item.id %}">{{ item }}</a></td>
+        <td><p>Author:<a href="{% url 'accounts:mypage' item.author.id %}">{{ item.author }}</a></p></td>
+        <td><p class="col s2">{{ item.created_date }}<p></td>
+        <td>
+          <a href="#" class='dropdown-button col s1' data-activates='dropdown1'><i class="material-icons">more_vert</i></a>
+          <!-- Dropdown Structure -->
+          <ul id='dropdown1' class='dropdown-content'>
+            <li><a class="" href="{% url 'article:update' item.id %}">Edit</a></li>
+            <li><a class="" href="{% url 'article:delete' item.id %}">Remove</a></li>
+          </ul>
+        </td>
+      </tr>
+      {% endfor %}
+    </tbody>
+</table>
 {%endblock%}
